var searchData=
[
  ['neighbors_5fratio_5364',['neighbors_ratio',['../structoperations__research_1_1_global_cheapest_insertion_filtered_heuristic_1_1_global_cheapest_insertion_parameters.html#a0aa77787d0df1b489476bfc6714ef819',1,'operations_research::GlobalCheapestInsertionFilteredHeuristic::GlobalCheapestInsertionParameters::neighbors_ratio()'],['../structoperations__research_1_1_savings_filtered_heuristic_1_1_savings_parameters.html#a0aa77787d0df1b489476bfc6714ef819',1,'operations_research::SavingsFilteredHeuristic::SavingsParameters::neighbors_ratio()']]],
  ['next_5fbase_5fto_5fincrement_5f_5365',['next_base_to_increment_',['../classoperations__research_1_1_path_operator.html#ac4e410910ad9361ed46221ecc6f0aa9b',1,'operations_research::PathOperator']]],
  ['no_5fcompression_5366',['NO_COMPRESSION',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a8a651fea5703c340f40fc527e4626fd5',1,'operations_research::PROTOBUF_FINAL']]],
  ['num_5fchain_5ftasks_5367',['num_chain_tasks',['../structoperations__research_1_1_disjunctive_propagator_1_1_tasks.html#ad5e547ae9d4f7380beae49908c7cdc48',1,'operations_research::DisjunctivePropagator::Tasks']]],
  ['num_5fpaths_5f_5368',['num_paths_',['../classoperations__research_1_1_path_operator.html#afd4107d44c9d70962fa429ecd6cc8312',1,'operations_research::PathOperator']]],
  ['num_5ftype_5fadded_5fto_5fvehicle_5369',['num_type_added_to_vehicle',['../structoperations__research_1_1_type_regulations_checker_1_1_type_policy_occurrence.html#aa0bf1d67fe0a2224b3ce02286a032c3e',1,'operations_research::TypeRegulationsChecker::TypePolicyOccurrence']]],
  ['num_5ftype_5fremoved_5ffrom_5fvehicle_5370',['num_type_removed_from_vehicle',['../structoperations__research_1_1_type_regulations_checker_1_1_type_policy_occurrence.html#abb92435061d2042b268fb2041c8e2754',1,'operations_research::TypeRegulationsChecker::TypePolicyOccurrence']]],
  ['number_5fof_5fnexts_5f_5371',['number_of_nexts_',['../classoperations__research_1_1_path_operator.html#aad7695e494039d607c26afb6acd0644a',1,'operations_research::PathOperator']]]
];
